welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:12: error: type mismatch;
 found   : Unit
 required: Int
	if (nombre ==0)
        ^